# learning-rust

./: README.md  rust.code-workspace
axum/: .env  Cargo.toml  data.db  readme.md
axum/entity/src/: event.rs  mod.rs  prelude.rs  test_table.rs
axum/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230326_122047_event_optionals.rs
axum/migrations/: 20230914185723_initial.sql  20230916202600_add_event_dependencies.sql  20231014220811_add_planned_event_columns.sql
axum/src/: lib.rs  main.rs
axum/src/db/: case_dao.rs  event_dao.rs  mod.rs  models.rs  planned_event_dao.rs  project_dao.rs  readme.md
axum/src/routes/: case_resource.rs  custom_middleware.rs  database.rs  event_resource.rs  hello_world.rs  mod.rs  params.rs  planned_event_resource.rs  project_resource.rs  response.rs  set_middleware_custom_header.rs  sqlx_db.rs  string_body.rs  teapot.rs
collections/: Cargo.toml
collections/src/: main.rs  string_ops.rs  vector_ops.rs
enums/: Cargo.toml
enums/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
lifetime/: Cargo.toml
lifetime/src/: main.rs
loops/: Cargo.toml
loops/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
modules/: Cargo.toml
modules/src/: front_of_house.rs  main.rs
modules/src/front_of_house/: hosting.rs
modules/src/front_of_house/hosting/: table.rs
ownership/: Cargo.toml
ownership/src/: main.rs
pm4rst/: Cargo.toml
pm4rst/src/: alpha.rs  csv_reader.rs  directly_follows.rs  lib.rs  model.rs
pm4rust/: Cargo.toml  running-example.csv
pm4rust/src/: lib.rs  miner.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
rocket_diesel_tests/diesel_demo/: Cargo.toml  db.sqlite
rocket_diesel_tests/diesel_demo/src/: lib.rs
rocket_diesel_tests/document_storage/: .env  Cargo.toml  Rocket.toml
rocket_diesel_tests/document_storage/migrations/2021-05-24-112043_initial_db_model/: down.sql  up.sql
rocket_diesel_tests/document_storage/src/: database.rs  db_macros.rs  lib.rs  main.rs  models.rs  schema.rs
rocket_diesel_tests/document_storage/src/endpoints/: collection.rs  document.rs  mod.rs  user.rs
rocket_diesel_tests/document_storage/src/repositories/: collection_repo.rs  document_repo.rs  mod.rs  user_repo.rs
slices/: Cargo.toml
slices/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs  main.rs
variables/: Cargo.toml
variables/src/: main.rs
workspace/: Cargo.toml
workspace/add_one/: Cargo.toml
workspace/add_one/src/: lib.rs
workspace/add_two/: Cargo.toml
workspace/add_two/src/: lib.rs
workspace/adder/: Cargo.toml
workspace/adder/src/: main.rs
