[package]
name = "learning-axum"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
axum = "0.6.10"
dotenvy = "0.15.7"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tower-http = { version = "0.4.4", features = [ "cors" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
