[package]
name = "pm4rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.2.1"
itertools = "0.10.5"
serde = { version = "1.0.158", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
