[package]
name = "document_storage"
version = "0.1.0"
authors = ["Lukas <lukas.schade@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool", "json"]