[package]
name = "document_storage"
version = "0.1.0"
authors = ["Lukas <lukas.schade@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.9.0"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]